--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mercy-backend",
+  "name": "heroku",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
@@ -7,35 +7,39 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "heroku-postbuild": "strapi build && node scripts/postinstall.js"
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "0.21.18",
+    "fs": "^0.0.1-security",
+    "knex": "<0.20.0",
+    "pg": "^8.5.1",
     "pg-connection-string": "^2.5.0",
     "slugify": "^1.6.2",
-    "sqlite3": "5.0.0",
-    "strapi": "3.6.8",
-    "strapi-admin": "3.6.8",
-    "strapi-connector-bookshelf": "3.6.8",
-    "strapi-plugin-content-manager": "3.6.8",
-    "strapi-plugin-content-type-builder": "3.6.8",
-    "strapi-plugin-email": "3.6.8",
-    "strapi-plugin-i18n": "3.6.8",
-    "strapi-plugin-upload": "3.6.8",
-    "strapi-plugin-users-permissions": "3.6.8",
-    "strapi-provider-upload-cloudinary": "^3.6.8",
-    "strapi-utils": "3.6.8"
+    "sqlite3": "latest",
+    "strapi": "3.6.3",
+    "strapi-admin": "3.6.3",
+    "strapi-connector-bookshelf": "3.6.3",
+    "strapi-plugin-content-manager": "3.6.3",
+    "strapi-plugin-content-type-builder": "3.6.3",
+    "strapi-plugin-email": "3.6.3",
+    "strapi-plugin-i18n": "^3.6.3",
+    "strapi-plugin-upload": "3.6.3",
+    "strapi-plugin-users-permissions": "3.6.3",
+    "strapi-provider-upload-cloudinary": "^3.6.3",
+    "strapi-utils": "3.6.3",
+    "uuidv4": "^6.2.6"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "58ef55e0-c177-4c88-98d8-60bb11c2a8f0"
+    "uuid": "7107e57d-a7dd-41a3-82c5-b50d4d6e962a"
   },
   "engines": {
     "node": ">=10.16.0 <=14.x.x",
-    "npm": "^6.0.0"
+    "npm": ">=6.0.0"
   },
   "license": "MIT"
 }
