--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "uuid": "7107e57d-a7dd-41a3-82c5-b50d4d6e962a"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
-    "npm": ">=6.0.0"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "license": "MIT"
 }
