--- a/api/company/models/company.settings.json
+++ b/api/company/models/company.settings.json
@@ -16,8 +16,8 @@
       "type": "string"
     },
     "categories": {
-      "collection": "category",
-      "via": "company"
+      "via": "company",
+      "collection": "category"
     },
     "slug": {
       "type": "uid",
